# NH_bigdata

./: Data_processing.py  ETF__info.ipynb  GenAI.ipynb  Untitled1.ipynb  Untitled15.ipynb  etf_nhti.py  etf_nhti_copy.py  main.py  pyproject.toml  ratio.ipynb  requirements.txt  더미 데이터 생성 ver2.ipynb  사용자_NHTI_설명_및_추천_종목에_대한_설명.ipynb  시장 관심도 상관관계 분석.ipynb  투자유형분류AI.ipynb
.ipynb_checkpoints/: final code-checkpoint.ipynb  simple EDA-Copy1-checkpoint.ipynb
