[tool.poetry]
name = "pca"
version = "0.1.0"
description = "Principal Componenent Analysis"
authors = ["Johnny Ise <john@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.3.2"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
